fix: prevent FOUC of navbar logo on mobile devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,6 +71,10 @@ body {
   body {
     touch-action: auto;
   }
+  
+  .hidden-on-mobile {
+    display: none !important;
+  }
 }
 
 /* Glassmorphism Util Classes */
